--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "nodemon": "^3.1.9"
   }
 }
