--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemailer": "^7.0.10",
@@ -22,6 +23,6 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.11"
   }
 }
