--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "nodemailer": "^7.0.10",
     "randomstring": "^1.3.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "swagger-autogen": "^2.23.7"
