--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemailer": "^7.0.10",
+    "nodemon": "^3.1.11",
     "randomstring": "^1.3.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
